--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "engine.io": "^6.4.0",
+    "express": "^4.18.2",
     "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
+    "shortid": "^2.2.16",
     "socket-io": "^1.0.0",
     "socket.io": "^4.6.0",
     "underscore": "^1.13.6"
