--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "shortid": "^2.2.16",
     "socket-io": "^1.0.0",
     "socket.io": "^4.6.0",
+    "stripe": "^11.11.0",
     "underscore": "^1.13.6"
   }
 }
