--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "remixicon": "^2.5.0",
     "shortid": "^2.2.16",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
