--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "socket-io": "^1.0.0",
     "socket.io": "^4.6.1",
     "stripe": "^11.11.0",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "uuid": "^9.0.0"
   }
 }
