--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "intl": "^1.2.5",
     "loadash": "^1.0.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.10",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
