--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
+    "cron": "^2.2.0",
     "engine.io": "^6.4.0",
     "express": "^4.18.2",
     "joi": "^17.7.1",
@@ -27,7 +28,7 @@
     "shortid": "^2.2.16",
     "socket-io": "^1.0.0",
     "socket.io": "^4.6.1",
-    "stripe": "^11.11.0",
+    "stripe": "^11.13.0",
     "underscore": "^1.13.6",
     "uuid": "^9.0.0"
   }
