--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "payu-node": "^0.1.0",
     "shortid": "^2.2.16",
     "socket-io": "^1.0.0",
     "socket.io": "^4.6.1",
