--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-intl": "^6.2.10",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
