--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.8.0",
     "react-intl": "^6.2.10",
     "react-loader-spinner": "^5.3.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
