--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,10 @@
     "loadash": "^1.0.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-intl": "^6.2.10",
     "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
@@ -40,6 +40,7 @@
     "shortid": "^2.2.16",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
